fix: layout on small screens

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -79,10 +79,14 @@ a {
 // =============================================================================
 
 .container {
-  max-width: calc(100% - 3rem);
+  max-width: 1000px;
+  padding: 0 1.5rem;
   margin: 0 auto;
-  padding-left: calc(1.5rem + max(0px, calc((100vw - 1000px - 3rem) * 0.6)));
-  padding-right: calc(1.5rem + max(0px, calc((100vw - 1000px - 3rem) * 0.4)));
+  // Shift slightly left on wide screens (55/45 split of free space)
+  @media (min-width: 1100px) {
+    margin-left: calc((100vw - 1000px) * 0.45);
+    margin-right: calc((100vw - 1000px) * 0.55);
+  }
 }
 
 .page-wrapper {
@@ -161,6 +165,7 @@ a {
 .main-content {
   flex: 1;
   min-width: 0;
+  // width: 100%;
 
   // Inline `code` gets backticks and teal color
   code:not(pre code) {
@@ -483,6 +488,7 @@ a {
 
 .posts-list {
   list-style: none;
+  // width: 100%;
 
   li {
     padding: 0.75rem 0;
